Remove pricing amounts

--- a/en/pricing.html
+++ b/en/pricing.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pricing | DELETE FROM</title>
-    <meta name="description" content="Indicative pricing ranges for AI services." />
+    <title>Estimates | DELETE FROM</title>
+    <meta name="description" content="Estimates and scope for AI services." />
     <meta name="theme-color" content="#0b0f14" />
     <link rel="canonical" href="https://delete-from.com/en/pricing" />
     <link rel="icon" href="../assets/favicon.svg" type="image/svg+xml" />
@@ -40,9 +40,9 @@
     <main>
       <section class="page-hero">
         <div class="container">
-          <span class="tag">Pricing</span>
-          <h1>Clear ranges, custom scope.</h1>
-          <p class="section-muted">Pricing depends on scope, integrations, and data sources.</p>
+          <span class="tag">Estimates</span>
+          <h1>Clear scope, custom estimate.</h1>
+          <p class="section-muted">We scope each project based on goals and integrations.</p>
         </div>
       </section>
 
@@ -50,18 +50,15 @@
         <div class="container card-grid">
           <article class="pricing-card reveal">
             <h3>Enterprise chatbots</h3>
-            <p class="price">From USD 6,000</p>
-            <p class="section-muted">RAG setup, integrations, analytics, production deploy.</p>
+            <p class="section-muted">Scope depends on data sources, channels, and complexity.</p>
           </article>
           <article class="pricing-card reveal">
             <h3>Custom applications</h3>
-            <p class="price">From USD 12,000</p>
-            <p class="section-muted">UX/UI, secure backend, core integrations.</p>
+            <p class="section-muted">Estimate based on workflows, integrations, and access levels.</p>
           </article>
           <article class="pricing-card reveal">
             <h3>AI integrations</h3>
-            <p class="price">From USD 4,500</p>
-            <p class="section-muted">Automation, connectors, logging, monitoring.</p>
+            <p class="section-muted">Defined by process volume and security requirements.</p>
           </article>
         </div>
       </section>
