--- a/pricing.html
+++ b/pricing.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pricing | DELETE FROM</title>
+    <title>Estimaciones | DELETE FROM</title>
     <meta
       name="description"
-      content="Rangos orientativos de pricing para chatbots, apps a medida e integraciones IA con AWS."
+      content="Estimaciones y alcance para proyectos de chatbots, apps a medida e integraciones IA."
     />
     <meta name="theme-color" content="#0b0f14" />
     <link rel="canonical" href="https://delete-from.com/pricing" />
@@ -43,11 +43,11 @@
     <main>
       <section class="page-hero">
         <div class="container">
-          <span class="tag">Pricing</span>
-          <h1>Rangos claros, cotización a medida.</h1>
+          <span class="tag">Estimaciones</span>
+          <h1>Alcance claro, cotización a medida.</h1>
           <p class="section-muted">
-            Los precios varían por alcance, data sources y nivel de integración. Estos son rangos
-            orientativos de inicio.
+            Cada proyecto se define por objetivos, data sources e integraciones. Te proponemos un
+            alcance y una estimación personalizada.
           </p>
         </div>
       </section>
@@ -56,23 +56,20 @@
         <div class="container card-grid">
           <article class="pricing-card reveal">
             <h3>Chatbots para empresas</h3>
-            <p class="price">Desde USD 6.000</p>
             <p class="section-muted">
-              Configuración inicial, RAG básico, integración con base de conocimiento y dashboard.
+              Alcance según complejidad, fuentes de datos y canales de atención.
             </p>
           </article>
           <article class="pricing-card reveal">
             <h3>Apps a medida</h3>
-            <p class="price">Desde USD 12.000</p>
             <p class="section-muted">
-              UI/UX, backend seguro, integraciones clave y despliegue productivo en AWS.
+              Estimación basada en flujos críticos, integraciones y niveles de acceso.
             </p>
           </article>
           <article class="pricing-card reveal">
             <h3>Integraciones IA</h3>
-            <p class="price">Desde USD 4.500</p>
             <p class="section-muted">
-              Automatización y conectores con tus sistemas existentes, logging y observabilidad.
+              Definimos alcance por procesos, volumen y requerimientos de seguridad.
             </p>
           </article>
         </div>
