--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
             <div class="hero-cta">
               <a class="btn btn-primary" href="contacto.html">Agendar llamada</a>
-              <a class="btn btn-secondary" href="pricing.html">Ver pricing</a>
+              <a class="btn btn-secondary" href="proceso.html">Ver proceso</a>
             </div>
           </div>
         </div>
